testsuite/poke.pkl/add-diag-1.pk
/* { dg-do compile } */

fun add_wrong = int:
  {
   var a = 10;
   return a +
          "foo"; /* { dg-error "invalid operand.*\n.*expected integral" } */
  }
